--- a/order-summary-component/index.html
+++ b/order-summary-component/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32">
 
   <link rel="stylesheet" href="style.css">
   <title>Frontend Mentor | Order summary card</title>
@@ -25,8 +25,8 @@
             device anywhere you like!</p>
         </div>
         <div class="summary-plan flex justify-between align-center">
-          <div class="flex justify-center">
-            <div class="summary-image">
+          <div class="flex justify-center align-center">
+            <div class="iconMusic">
               <img src="./images/icon-music.svg" alt="">
             </div>
             <div class="plan-amount">
@@ -36,7 +36,7 @@
           </div>
           <a class="change-link" href="#">Change</a>
         </div>
-        <div class="flex flex-col justfiy-center align-center">
+        <div class="summary-buttons flex flex-col justfiy-center align-center">
           <button class="btn btn-proceed">Proceed to Payment</button>
           <button class="btn btn-cancel">Cancel Order</button>
         </div>
