--- a/qr-code-component/index.html
+++ b/qr-code-component/index.html
@@ -14,13 +14,17 @@
     <title>Frontend Mentor | QR code component</title>
   </head>
   <body>
-    <section>
-      <img src="./images/image-qr-code.png" alt="qrCode" />
-      <p class="improve">Improve your front-end skills by building projects</p>
-      <p class="skills">
-        Scan the QR code to visit Frontend Mentor and take your coding skills to
-        the next level
-      </p>
-    </section>
+    <main>
+      <section>
+        <img src="./images/image-qr-code.png" alt="qrCode" />
+        <h1 class="improve">
+          Improve your front-end skills by building projects
+        </h1>
+        <p class="skills">
+          Scan the QR code to visit Frontend Mentor and take your coding skills
+          to the next level
+        </p>
+      </section>
+    </main>
   </body>
 </html>
