--- a/qr-code-component/index.html
+++ b/qr-code-component/index.html
@@ -15,12 +15,16 @@
   </head>
   <body>
     <main>
-      <section>
-        <img src="./images/image-qr-code.png" alt="qrCode" />
-        <h1 class="improve">
+      <section class="qrCode">
+        <img
+          class="qrCode__img"
+          src="./images/image-qr-code.png"
+          alt="qrCode"
+        />
+        <h1 class="qrCode__heading">
           Improve your front-end skills by building projects
         </h1>
-        <p class="skills">
+        <p class="qrCode__subtext">
           Scan the QR code to visit Frontend Mentor and take your coding skills
           to the next level
         </p>
