accessibility issue resolved

--- a/blog-preview-card/index.html
+++ b/blog-preview-card/index.html
@@ -30,7 +30,7 @@
         </p>
         <div class="blogCard__list">
           <img src="./assets/images/image-avatar.webp" alt="Avatar" />
-          <h3>Greg Hooper</h3></li>
+          <p>Greg Hooper</p>
         </div>
       </section>
     </main>
