--- a/blog-preview-card/index.html
+++ b/blog-preview-card/index.html
@@ -10,6 +10,12 @@
       sizes="32x32"
       href="./assets/images/favicon-32x32.png"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>Frontend Mentor | Blog preview card</title>
   </head>
@@ -29,7 +35,10 @@
           content, and presentation.
         </p>
         <div class="blogCard__list">
-          <img src="./assets/images/image-avatar.webp" alt="Avatar" />
+          <img
+            src="./assets/images/image-avatar.webp"
+            alt="image-of-a-person"
+          />
           <p>Greg Hooper</p>
         </div>
       </section>
