blog preview card(PR comments) resolved

--- a/blog-preview-card/index.html
+++ b/blog-preview-card/index.html
@@ -38,8 +38,9 @@
           <img
             src="./assets/images/image-avatar.webp"
             alt="image-of-a-person"
+            class="blogCard__list--img"
           />
-          <p>Greg Hooper</p>
+          <p class="blogCard__list-name">Greg Hooper</p>
         </div>
       </section>
     </main>
